// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrialStatusWidget component rendered content matches the snapshot for namespace in active trial 1`] = `
<div
  class="gl-flex gl-flex-col gl-items-stretch gl-w-full"
  data-testid="trial-widget-menu"
  id="reference-0"
>
  <div>
    <div
      class="gl-flex gl-items-center gl-w-full"
    >
      <span
        class="gl-mb-1 gl-mr-3 nav-icon-container svg-container"
      >
        <img
          alt=""
          class="svg"
          src="illustrations/gitlab_logo.svg"
          width="16"
        />
      </span>
      <span
        class="gl-grow nav-item-name"
      >
        Ultimate Trial
      </span>
      <span
        class="gl-mr-auto gl-overflow-hidden gl-text-sm gl-whitespace-nowrap"
      >
        Day 10/30
      </span>
    </div>
    <div
      class="gl-flex gl-items-stretch gl-mt-2"
    >
      <gl-progress-bar-stub
        aria-hidden="true"
        class="gl-grow"
        value="10"
      />
    </div>
    <b-button-stub
      class="gl-button gl-mt-3 gl-underline"
      data-testid="learn-about-features-btn"
      href="discover-path"
      size="sm"
      tag="button"
      title="Learn about features"
      type="button"
      variant="link"
    >
      <span
        class="gl-button-text"
      >
        Learn about features
      </span>
    </b-button-stub>
  </div>
</div>
`;

exports[`TrialStatusWidget component rendered content matches the snapshot for namespace not in active trial 1`] = `
<div
  class="gl-flex gl-flex-col gl-items-stretch gl-w-full"
  data-testid="trial-widget-menu"
  id="reference-0"
>
  <div
    class="gl-flex gl-gap-4 gl-px-2 gl-w-full"
  >
    <gl-icon-stub
      class="!gl-text-blue-600 gl-shrink-0"
      name="information-o"
      size="16"
      variant="current"
    />
    <div>
      <div
        class="gl-font-bold"
      >
        Your 30-day trial has ended
      </div>
      <div
        class="gl-mt-3"
      >
        Looking to do more with GitLab?
        <b-button-stub
          class="!gl-text-default gl-button gl-mb-1 gl-underline"
          data-testid="learn-about-features-btn"
          href="discover-path"
          size="sm"
          tag="button"
          title="Learn about features"
          type="button"
          variant="link"
        >
          <span
            class="gl-button-text"
          >
            Learn about features
          </span>
        </b-button-stub>
      </div>
    </div>
  </div>
</div>
`;
